--- a/Resources/config/doctrine/Payment.orm.yml
+++ b/Resources/config/doctrine/Payment.orm.yml
@@ -11,5 +11,12 @@ Maci\OrderBundle\Entity\Payment:
     fields:
         created:
             type: datetime
+    manyToOne:
+        order:
+            targetEntity: Order
+            inversedBy: payments
+            joinColumn:
+                name: order_id
+                referencedColumnName: id
     lifecycleCallbacks:
         prePersist: [ setCreatedValue ]
