--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -3,11 +3,21 @@ services:
 
     # Ipn Action
 
-    Maci\OrderBundle\Controller\StoreNotificationAction:
-        arguments: ["@doctrine.orm.entity_manager","@payum","@httplug.message_factory.guzzle"]
+    Http\Message\MessageFactory\GuzzleMessageFactory:
+        arguments: []
+
+    httplug.message_factory.guzzle:
+        alias: Http\Message\MessageFactory\GuzzleMessageFactory
+        public: true
 
     maci.payment.payum.action.store_notification:
-        alias: Maci\OrderBundle\Controller\StoreNotificationAction
+        class: Maci\OrderBundle\Controller\StoreNotificationAction
+        arguments: ["@doctrine.orm.entity_manager","@payum","@httplug.message_factory.guzzle", false]
+        public: true
+
+    maci.payment.payum.action.store_notification_sandbox:
+        class: Maci\OrderBundle\Controller\StoreNotificationAction
+        arguments: ["@doctrine.orm.entity_manager","@payum","@httplug.message_factory.guzzle", true]
         public: true
 
     # Controller Service
