--- a/Resources/config/doctrine/PaymentDetails.orm.yml
+++ b/Resources/config/doctrine/PaymentDetails.orm.yml
@@ -8,3 +8,10 @@ Maci\OrderBundle\Entity\PaymentDetails:
             type: integer
             generator:
                 strategy: AUTO
+    manyToOne:
+        payment:
+            targetEntity: Payment
+            inversedBy: paymentDetails
+            joinColumn:
+                name: payment_id
+                referencedColumnName: id
