--- a/Resources/config/doctrine/PaymentDetails.orm.yml
+++ b/Resources/config/doctrine/PaymentDetails.orm.yml
@@ -8,6 +8,11 @@ Maci\OrderBundle\Entity\PaymentDetails:
             type: integer
             generator:
                 strategy: AUTO
+    fields:
+        type:
+            type: string
+            length: 15
+            nullable: true
     manyToOne:
         payment:
             targetEntity: Payment
